[gd_scene load_steps=11 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/Wings.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Resources/WingsFrame2.png" type="Texture" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/WingsFrame1.png" type="Texture" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/WingsFrame3.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/WingsFrame5.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/WingsFrame4.png" type="Texture" id=6]
[ext_resource path="res://RainIsoMainContents/Scenes/TheWings.gd" type="Script" id=7]
[ext_resource path="res://RainIsoMainContents/Resources/GlowPiece2.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 28 )

[sub_resource type="Animation" id=2]
resource_name = "Wings"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ]
}

[node name="Wings" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Wings = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WingTimer" type="Timer" parent="."]
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 8 )
energy = 0.75

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WingTimer" to="." method="_on_WingTimer_timeout"]
